Add Customer model and provider. And also Add click behaver for click the buttons in the ustomerview. And add methods to manager them.

--- a/WiredBrainCofee.CustumrsApp.csproj
+++ b/WiredBrainCofee.CustumrsApp.csproj
@@ -15,4 +15,9 @@
     <Resource Include="Controls\WiredBrainCofee.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Customers\Commands\" />
+    <Folder Include="Data\Customers\Queries\" />
+  </ItemGroup>
+
 </Project>
