Add resource variable in the App.xaml

--- a/WiredBrainCofee.CustumrsApp.csproj
+++ b/WiredBrainCofee.CustumrsApp.csproj
@@ -8,8 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Controls\WiredBrainCofee.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Data\Customers\Commands\" />
     <Folder Include="Data\Customers\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Controls\WiredBrainCofee.png" />
   </ItemGroup>
 
 </Project>
