--- a/WiredBrainCofee.CustumrsApp.csproj
+++ b/WiredBrainCofee.CustumrsApp.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Controls\WiredBrainCofee.png" />
   </ItemGroup>
 
